--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,14 +1,12 @@
-all:
-  hosts:
-    [nfs]
-    172.31.89.244 ansible_ssh_user='ec2-user'
+[nfs]
+<NFS-Server-Private-IP-Address> ansible_ssh_user='ec2-user'
 
-    [webservers]
-    172.31.92.247 ansible_ssh_user='ec2-user'
-    172.31.85.21 ansible_ssh_user='ec2-user'
+[webservers]
+<Web-Server1-Private-IP-Address> ansible_ssh_user='ec2-user'
+<Web-Server2-Private-IP-Address> ansible_ssh_user='ec2-user'
 
-    [db]
-    172.31.81.206 ansible_ssh_user='ec2-user' 
+[db]
+<Database-Private-IP-Address> ansible_ssh_user='ec2-user' 
 
-    [lb]
-    172.31.30.156 ansible_ssh_user='ubuntu'
+[lb]
+<Load-Balancer-Private-IP-Address> ansible_ssh_user='ubuntu
