--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,12 +1,12 @@
 [nfs]
-<NFS-Server-Private-IP-Address> ansible_ssh_user='ec2-user'
+172.31.89.244 ansible_ssh_user='ec2-user'
 
 [webservers]
-<Web-Server1-Private-IP-Address> ansible_ssh_user='ec2-user'
-<Web-Server2-Private-IP-Address> ansible_ssh_user='ec2-user'
+172.31.92.247 ansible_ssh_user='ec2-user'
+172.31.85.21 ansible_ssh_user='ec2-user'
 
 [db]
-<Database-Private-IP-Address> ansible_ssh_user='ec2-user' 
+172.31.81.206 ansible_ssh_user='ec2-user' 
 
 [lb]
-<Load-Balancer-Private-IP-Address> ansible_ssh_user='ubuntu
+172.31.30.156 ansible_ssh_user='ubuntu
