--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -6,7 +6,7 @@
 172.31.85.21 ansible_ssh_user='ec2-user'
 
 [db]
-172.31.81.206 ansible_ssh_user='ec2-user' 
+172.31.81.206 ansible_ssh_user='ubuntu' 
 
 [lb]
 172.31.30.156 ansible_ssh_user='ubuntu
