--- a/roles/apache/defaults/main.yml
+++ b/roles/apache/defaults/main.yml
@@ -13,7 +13,7 @@ apache_vhosts_template: "vhosts.conf.j2"
 # Set this to `true` to remove that default.
 apache_remove_default_vhost: false
 
-apache_global_vhost_settings: |
+apache_global_vhost_settings: 
   DirectoryIndex index.php index.html
 
 apache_vhosts:
@@ -21,6 +21,8 @@ apache_vhosts:
   # 'serveradmin, serveralias, allow_override, options, extra_parameters'.
   - servername: "local.dev"
     documentroot: "/var/www/html"
+    loadbalancer_name: "myapp1"
+
 
 apache_allow_override: "All"
 apache_options: "-Indexes +FollowSymLinks"
@@ -59,3 +61,8 @@ apache_restart_state: restarted
 # Apache package state; use `present` to make sure it's installed, or `latest`
 # if you want to upgrade or switch versions using a new repo.
 apache_packages_state: present
+
+# Webservers 
+lb_name: "myapp1"
+web1: "172.31.25.134"
+web2: "172.31.18.155"
