--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -29,6 +29,16 @@
 # Vhost configuration.
 - import_tasks: vhosts.yml
 
+- name: set webservers host name in /etc/hosts  
+  become: yes
+  blockinfile:
+    path: /etc/hosts
+    block: |
+      {{ item.ip }} {{ item.name }}
+    loop: 
+      - { name: web1, ip: 172.31.25.134 }
+      - { name: web2, ip: 172.31.18.155 }
+
 # Nginx setup.
 - name: Copy nginx configuration in place.
   become: true
