--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,8 +1,4 @@
 ---
-- name: import common file
-  import_playbook: ../static-assignments/common.yml
-  tags: 
-    - always
 
 - name: include env-vars file
   import_playbook: ../dynamic-assignments/env-vars.yml
@@ -13,8 +9,8 @@
   import_playbook: ../static-assignments/db.yml
   
 - name: import webservers file
-  import_playbook: ../static-assignments/uat-webservers.yml
+  import_playbook: ../static-assignments/webservers.yml
 
 - name: import loadbalacners assignment
   import_playbook: ../static-assignments/lb.yml
-  when: load_balancer is required
+  when: load_balancer_is_required
