--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -96,4 +96,9 @@ nginx_log_format: |-
   '"$http_user_agent" "$http_x_forwarded_for"'
 
 enable_nginx_lb: false
-load_balacer_is_required: false
+load_balancer_is_required: false
+
+# Webservers 
+loadbalancer_name: "myapp1"
+web1: "172.31.25.134"
+web2: "172.31.18.155"
