--- a/static-assignments/common.yml
+++ b/static-assignments/common.yml
@@ -1,26 +1,52 @@
----
-- name: update web, nfs and db servers
-  hosts: webservers, nfs, db
-  remote_user: ec2-user
-  become: yes
-  become_user: root
-  tasks:
-    - name: ensure wireshark is at the latest version
-      yum:
-        name: wireshark
-        state: latest
+# ---
+# - name: update web, nfs and db servers
+#   hosts: webservers, nfs, db
+#   remote_user: ec2-user
+#   become: yes
+#   become_user: root
+#   tasks:
+#     - name: ensure wireshark is at the latest version
+#       yum:
+#         name: wireshark
+#         state: latest
 
-- name: update LB server
-  hosts: lb
-  remote_user: ubuntu
-  become: yes
-  become_user: root
-  tasks:
-    - name: Update apt repo
-      apt: 
-        update_cache: yes
+# - name: update LB server
+#   hosts: lb
+#   remote_user: ubuntu
+#   become: yes
+#   become_user: root
+#   tasks:
+#     - name: Update apt repo
+#       apt: 
+#         update_cache: yes
 
-    - name: ensure wireshark is at the latest version
-      apt:
-        name: wireshark
-        state: latest
+#     - name: ensure wireshark is at the latest version
+#       apt:
+#         name: wireshark
+#         state: latest
+
+
+# ---
+# - hosts: nfs,webservers
+#   become: true
+#   tasks:
+#    - name: installing and updating repos
+#      apt: update_cache=yes state=present
+
+#    - name: ensure ntp is installed
+#      apt: name=ntp state=present
+
+#    - name: ensure ntp is running 
+#      service: name=ntp state=started enabled=yes
+
+# - hosts: db,lb
+#   become: true
+#   tasks:
+#    - name: installing and updating repos
+#      dnf: update_cache=yes state=present
+
+#    - name: ensure ntp is installed
+#      dnf: name=chrony state=present
+
+#    - name: ensure ntp is running 
+#      service: name=chronyd state=started enabled=yes
