--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -42,10 +42,10 @@ nginx_server_names_hash_bucket_size: "64"
 nginx_proxy_cache_path: ""
 
 nginx_extra_conf_options: ""
-# Example extra main options, used within the main nginx's context:
-#   nginx_extra_conf_options: |
-#     env VARIABLE;
-#     include /etc/nginx/main.d/*.conf;
+Example extra main options, used within the main nginx's context:
+  nginx_extra_conf_options: |
+    env VARIABLE;
+    include /etc/nginx/main.d/*.conf;
 
 nginx_extra_http_options: ""
 Example extra http options, printed inside the main server http config:
