--- a/roles/nginx/tasks/setup-RedHat.yml
+++ b/roles/nginx/tasks/setup-RedHat.yml
@@ -12,3 +12,9 @@
   package:
     name: "{{ nginx_package_name }}"
     state: present
+
+# - name: Set httpd_can_network_connect flag on and keep it persistent across reboots
+#   ansible.posix.seboolean:
+#     name: httpd_can_network_connect
+#     state: yes
+#     persistent: yes
