--- a/deploy /jenkinsfile
+++ b/deploy /jenkinsfile
@@ -29,7 +29,7 @@
     stage('Package') {
       steps {
         script {
-          sh 'echo "Packaging App"'
+          sh 'echo "Packaging-App"'
         }
       }
     }
