--- a/deploy /jenkinsfile
+++ b/deploy /jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
 
     stage('Run Ansible playbook') {
       steps {
-         ansiblePlaybook become: true, colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev', playbook: 'playbook/site.yml'
+         ansiblePlaybook become: true, colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/dev', playbook: 'playbooks/site.yml'
       }
     }
 
