--- a/roles/mysql/defaults/main.yml
+++ b/roles/mysql/defaults/main.yml
@@ -112,12 +112,26 @@ mysql_databases:
     encoding: utf8
     replicate: 1
 
+mysql_databases:
+  - name: homestead
+    collation: utf8_general_ci
+    encoding: utf8
+    replicate: 1
+
 # Users.
 mysql_users: 
  - name: webaccess
    host: 0.0.0.0
    password: secret
    priv: '*.*:ALL,GRANT'
+
+mysql_users: 
+ - name: homestead
+   host: 172.31.81.155
+   password: secret
+   priv: '*.*:ALL,GRANT'
+
+
 
 # Replication settings (replication is only enabled if master/user have values).
 mysql_server_id: "1"
@@ -128,3 +142,7 @@ mysql_replication_role: ''
 mysql_replication_master: ''
 # Same keys as `mysql_users` above.
 mysql_replication_user: []
+
+
+
+
