--- a/roles/mysql/defaults/main.yml
+++ b/roles/mysql/defaults/main.yml
@@ -128,7 +128,7 @@ mysql_users:
 mysql_users: 
  - name: homestead
    host: 172.31.81.155
-   password: secret
+   password: sePret^i
    priv: '*.*:ALL,GRANT'
 
 
