--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -5,7 +5,7 @@
 
 # - hosts: nginx
 # - name: nginx assignment
-#   ansible.builtin.import_playbook: ../static-assignments/nginx.yml
+#   ansible.builtin.import_playbook: ../static-assignments/nginx.ymla
 
 # - hosts: artifactory
 # - name: artifactory assignment
