--- a/playbooks/apache.yml
+++ b/playbooks/apache.yml
@@ -1,14 +1,6 @@
 --- 
-- 
-  hosts: all
-  gather_facts: true
-  become: true
-  tasks: 
-    - 
-      name: "1. Stop httpd service"
-      tags: stop_apache
-      service: 
-        name: httpd
-        state: stopped
+- hosts: db
+- name: database assignment
+  ansible.builtin.import_playbook: ../static-assignments/db.yml
   
 
