--- a/static-assignments/sonar.yml
+++ b/static-assignments/sonar.yml
@@ -1,7 +1,7 @@
 ---
-- hosts: sonar
+- hosts: sonarqube
   become: true
   roles:
-     - sonarqube
+     - /home/ec2-user/ansible-config-mgt/roles/sonarqube
 
      
